<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_plugin_zed_od</name>
  <version>0.1.0</version>
  <description>Plugin to display Object Detection results on Rviz</description>
  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>

  <license>MIT</license>

  <url type="website">https://www.stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>

  <depend>zed_interfaces</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export> 
</package>
