<?xml version="1.0"?>
<package format="2">
  <name>zed_examples</name>
  <version>3.0.0</version>
  <description>Stereolabs zed-ros-examples support meta package</description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-tutorials</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-tutorials/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>zed_ar_track_alvar_example</exec_depend>
  <exec_depend>zed_nodelet_example</exec_depend>
  <exec_depend>zed_rtabmap_example</exec_depend>
  <exec_depend>zed_depth_sub_tutorial</exec_depend>
  <exec_depend>zed_tracking_sub_tutorial</exec_depend>
  <exec_depend>zed_video_sub_tutorial</exec_depend>
  <exec_depend>zed_display_rviz</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
