<?xml version="1.0"?>
<package format="2">
  <name>zed_sync_test</name>
  <version>1.0.0</version>
  <description>"zed_sync_test" is a ROS package to test synchronization of RGB and Depth topics .</description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>  

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>zed_nodelets</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
